<resources>
    <string name="app_name">Bibliodex</string>
    <string name="welcomeTitle">Welcome</string>
    <string name="btnAddBook">Add Book</string>
    <string name="btnSeeShelf">My Bookshelf</string>
    <string name="currentlyReading">Currently reading</string>
    <string name="coverLabel">Cover</string>
    <string name="btnChangeCover">Change Cover</string>
    <string name="titleBook">Title</string>
    <string name="authorBook">Author</string>
    <string name="yearBook">Publication Year</string>
    <string name="isFav">Favorite</string>
    <string name="isRead">Is Read</string>
    <string name="currentPage">Current Page</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="read">Read</string>
    <string name="page">Page</string>
    <string name="inProgress">In Progress</string>
    <string name="displayAll">All Books</string>
    <string name="displayFav">Favorites</string>
    <string name="displayRead">Book Read</string>
    <string name="displayProgress">Books in progress</string>
    <string name="searchBooks">Search Book</string>
    <string name="btnBack">Back</string>
    <string name="deleteTitle">Are you sure to delete this book?</string>
    <string name="yesLabel">Yes</string>
    <string name="noLabel">No</string>
</resources>