<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="#99000000"
    android:padding="12dp" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/deleteTitle" />

    <include

        layout="@layout/item_book" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/modelbouton"
            android:text="@string/yesLabel"
            android:textAlignment="center"

            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/modelbouton"
            android:text="@string/noLabel"
            android:textAlignment="center"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>