<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ListBookWindow">

    <SearchView
        android:id="@+id/filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:iconifiedByDefault="false"
        android:queryHint="@string/searchBooks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First Row of Buttons -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisplayAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/modelbouton"
        android:text="@string/displayAll"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnDisplayFav"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisplayFav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/modelbouton"
        android:text="@string/displayFav"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDisplayAll"
        app:layout_constraintTop_toTopOf="@id/btnDisplayAll" />

    <!-- Second Row of Buttons -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisplayRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/modelbouton"
        android:text="@string/displayRead"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnDisplayProgress"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDisplayAll" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisplayProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/modelbouton"
        android:text="@string/displayProgress"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDisplayRead"
        app:layout_constraintTop_toTopOf="@id/btnDisplayRead" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="350dp"
        android:layout_height="415dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplayRead"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/modelbouton"
        android:text="@string/btnBack"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>